# libtoggle

./: Cargo.toml  LICENSE  README.md  search-index.js
implementors/toggle/: trait.Toggle.js
src/: lib.rs
src/toggle/: lib.rs.html
toggle/: index.html  sidebar-items.js  struct.Disabled.html  struct.Enabled.html  trait.Toggle.html
